widget 05/06: fix scrollbar

--- a/client/src/widgets/05/style.scss
+++ b/client/src/widgets/05/style.scss
@@ -187,13 +187,11 @@
           grid-template-columns: 1fr 1fr;
           gap: 5px;
           width: 100%;
-          padding-right: 10px;
           scrollbar-gutter: stable;
           scrollbar-width: thin;
           scrollbar-color: rgba(0, 0, 0, 0.25) transparent;
           align-items: start;
           grid-auto-rows: min-content;
-          box-sizing: content-box;
 
           @container content-parent (max-width: 340px) {
             max-height: 376px;
